# cloudbox

./: .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  gcloud  gsutil  pyproject.toml
.claude/commands/: docker-publish.md  publish.md
.github/workflows/: pages.yml  tests.yml
cloudbox/: config.py  gcloudlocal.py  gsutillocal.py  main.py
cloudbox/admin/: app.py
cloudbox/admin/static/: admin.css  (+1 more)
cloudbox/core/: auth.py  errors.py  middleware.py  store.py
docs/: index.html  index.md  sitemap.xml
docs/services/: gcs.md  pubsub.md
examples/: README.md  shared.py
examples/bigquery/: parameterized_query.py  tables.py
examples/firestore/: batch_write.py  crud.py  queries.py  transactions.py
examples/gcs/: byte_range.py  compose.py  upload_download.py
examples/pubsub/: batch_publish.py  publish_subscribe.py
examples/scheduler/: jobs.py
examples/secretmanager/: secrets.py
examples/tasks/: tasks.py
localgcp/: config.py  main.py
localgcp/admin/: app.py
localgcp/core/: auth.py  errors.py  middleware.py  store.py
pages/: robots.txt
sdk_compat/: clients.py  test_with_sdk.py
tests/: conftest.py  test_bigquery.py  test_core.py  test_firestore.py  test_firestore_query.py  test_gcs.py  test_gcs_notifications.py  test_gcs_resumable.py  test_gsutillocal.py  test_kms.py  test_logging.py  test_pubsub.py  test_pubsub_bq_gcs_subs.py  test_pubsub_schema.py  test_pubsub_snapshots.py  test_pubsub_streaming.py  test_scheduler.py  test_scheduler_worker.py  test_secretmanager.py  test_spanner.py  test_tasks.py  test_tasks_worker.py
(+58 files in other folders)
