[project]
name = "localgcp"
version = "0.1.0"
description = "Local emulator for GCP services"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "grpcio>=1.60",
]

[project.scripts]
localgcp = "localgcp.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "google-cloud-storage>=2.16",
    "google-cloud-pubsub>=2.21",
    "google-cloud-firestore>=2.16",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-tasks>=2.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
